changes to staleconfigexceptions for SERVER-4158